Fix for viewing content on smaller viewports and menus (#7281)

--- a/frontend/app/src/styles/global.scss
+++ b/frontend/app/src/styles/global.scss
@@ -199,6 +199,7 @@ body {
     background: var(--bg);
     color: var(--txt);
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: var(--font-fallback);
     font-family: var(--font);
@@ -211,14 +212,6 @@ body {
     height: calc(var(--vh, 1vh) * 100);
     height: 100dvh; // firefox will ignore this
     position: fixed;
-
-    @include size-below(lg) {
-        padding: $sp3;
-    }
-
-    @include mobile() {
-        padding: 0;
-    }
 
     &.fill {
         transition: none;
